tests/ui/consts/const_transmute_type_id.stderr
error[E0080]: unable to turn pointer into integer
  --> $DIR/const_transmute_type_id.rs:7:27
   |
LL |     let id: u8 = unsafe { (&raw const id).cast::<u8>().read() };
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `_` failed here
   |
   = help: this code performed an operation that depends on the underlying bytes representing a pointer
   = help: the absolute address of a pointer is not known at compile-time, so such operations are not supported

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
